Perfetto: Finalize messages before destroying trace writer

This fixes a data race where ~TraceWriter tries finalizing the
same message as ~TraceEventDataSource, on a different sequence
(TraceWriter is owned by TraceEventDataSource, but needs to
be destructed on a different sequence due to ~TraceEventDataSource
being called on thread shutdown and could be calling PostTask).

BUG=886528
R=ssid@chromium.org

Change-Id: I61b498b8b4bcf3b40e43e9db49711e593766df26
Reviewed-on: https://chromium-review.googlesource.com/1232414
Reviewed-by: Siddhartha S <ssid@chromium.org>
Commit-Queue: oysteine <oysteine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592500}
Former-commit-id: 0d4c320181d981b3dea0e4decead0e740bbb056f